# gmaps_avoid_swiss

./: .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflow/: ruff.yml
.github/workflows/: lint_test.yml
docs/: Makefile  conf.py  geos.rst  gmaps_avoid_swiss.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
examples/: compute_route.py
src/gmaps_avoid_swiss/: __init__.py  cli.py  client.py  geo_check.py  gmaps_avoid_swiss.py  routes.py  waypoints.py
src/gmaps_avoid_swiss/data/: switzerland.geojson
tests/: __init__.py  test_cli.py  test_geo_check.py  test_gmaps_avoid_swiss.py  test_routes.py  test_waypoints.py
